<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" >

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="368dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:fillViewport="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">

            <EditText
                    android:id="@+id/txtName"
                    android:layout_width="350dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="21dp"
                    android:hint="@string/txtName"
                    android:tag="myEditText"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"/>

            <EditText
                    android:id="@+id/txtSurnameUser"
                    android:layout_width="152.5dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/txtName"
                    android:layout_marginTop="20dp"
                    android:hint="@string/txtSurname"
                    android:tag="myEditText"/>


            <Button
                    android:id="@+id/btnBithdate"
                    android:layout_width="152.5dp"
                    android:layout_height="40dp"

                    android:layout_below="@id/txtSurnameUser"
                    android:layout_marginTop="20dp"

                    android:background="@drawable/button_selection"

                    android:text="@string/txtbirthdate"
                    android:textColor="@android:color/white"
                    android:gravity="center"
            />

            <EditText
                    android:id="@+id/txtSurname2User"
                    android:layout_width="152.5dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="165dp"
                    android:layout_marginTop="80dp"
                    android:hint="@string/txtSurname2"
                    android:tag="myEditText"
                    android:layout_toEndOf="@+id/txtSurnameUser"
                    android:layout_marginStart="12dp"/>

            <EditText
                    android:id="@+id/txtAddress"
                    android:layout_width="350dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="90dp"
                    android:hint="@string/txtAddress"
                    android:tag="myEditText"
                    android:layout_below="@+id/txtSurnameUser"/>

            <EditText
                    android:id="@+id/txtPostalCode"
                    android:layout_width="155dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/txtPostalCode"
                    android:tag="myEditText"
                    android:layout_below="@+id/txtAddress"/>

            <EditText
                    android:id="@+id/txtCity"
                    android:layout_width="155dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="165dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/txtCity"
                    android:tag="myEditText"
                    android:layout_below="@+id/txtAddress"/>

            <EditText
                    android:id="@+id/intPhone"
                    android:layout_width="155dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="165dp"
                    android:hint="@string/txtPhone"
                    android:tag="myEditText"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/txtPostalCode"/>

            <android.support.design.widget.FloatingActionButton
                    android:id="@+id/btnNext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="23dp"
                    android:layout_marginBottom="43dp"
                    android:layout_alignParentBottom="true"

                    android:background="@drawable/button_selection"
                    android:src="@drawable/chevron_right"
            />


        </RelativeLayout>
    </ScrollView>
</RelativeLayout>