<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity">

    <!--CONTENT DESCRIPCION -  sirve para por si falla la imagen o la esta usando -->
    <!--alguien con discapacidad-->
    <ImageView

            android:id="@+id/imgLogin"

            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_marginTop="48dp"
            android:layout_centerHorizontal="true"

            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/app_name"
            android:layout_alignParentTop="true"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputIdMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/imgLogin"
            android:layout_marginTop="24dp"

            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/loginMargin"
            android:layout_marginStart="@dimen/loginMargin"
    >

        <!--EMS es la longitud minima para que sirva el editText-->
        <EditText
                android:id="@+id/mailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:ems="10"
                android:hint="@string/mailLogin"
                android:inputType="textEmailAddress"
                android:layout_alignParentStart="true"
        />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputIdPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/textInputIdMail"
            android:layout_marginTop="12dp"

            android:layout_centerHorizontal="true"
            android:layout_marginEnd="@dimen/loginMargin"
            android:layout_marginStart="@dimen/loginMargin">

        <EditText
                android:id="@+id/passwordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:ems="10"
                android:hint="@string/passwordLogin"
                android:inputType="textPassword"
                android:layout_alignParentStart="true"
        />
    </android.support.design.widget.TextInputLayout>

    <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/loginMargin"

            android:layout_centerHorizontal="true"

            android:text="@string/txtBtnLogin"
            android:onClick="onGoNext"
            android:background="@drawable/button_selection"
            android:textColor="@android:color/white"

    />

</RelativeLayout>